Docker VM K8s/k8s/argo-workflows/ingress-argo-workflow.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argo-server
  namespace: argo
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argo-workflow.home.lan`)
      priority: 10
      services:
        - name: argo-server
          port: 2746

  tls:
    certResolver: default
